--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </div>
         <div>
             <ul>
-                <li><a href="https://raw.githubusercontent.com/SWEetBITGroup/SWEDesigner-App/master/Back-End/docs/index.html">Back-End</a>
+                <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Back-End/docs/">Back-End</a>
             </ul>
         </div>
     </body>
