--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </div>
         <div>
             <ul>
-                <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Back-End/docs/">Back-End</a>
+                <li><a href="https://github.com/SWEetBITGroup/SWEDesigner-App/tree/master/Back-End/docs">Back-End</a>
             </ul>
         </div>
     </body>
