--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </div>
         <div>
             <ul>
-                <li><a href="https://github.com/SWEetBITGroup/SWEDesigner-App/blame/master/Back-End/docs/index.html">Back-End</a>
+                <li><a href="Back-End/docs/index.html">Back-End</a>
             </ul>
         </div>
     </body>
