--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <style>
+        html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+        </style>
         <title>SWEDesigner API</title>
     </head>
 
-    <body>
-        <div>
+    <body class="w3-light-grey">
+        <div class = "w3-third">
             <h1>SWEDesigner API</h1>
         </div>
-        <div>
+        <div class="w3-white w3-text-grey w3-card-4">
             <ul>
-                <li><a href="https://github.com/SWEetBITGroup/SWEDesigner-App/tree/master/Back-End/docs">Back-End</a>
+                <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Back-End/docs">Back-End</a>
             </ul>
         </div>
     </body>
