aggiunto stile pagina manuali

--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <html>
     <head>
         <title>SWEDesigner API</title>
+        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
     </head>
 
     <body>
-        <div>
-            <h1>SWEDesigner API</h1>
-        </div>
-        <div>
-            <ul>
-                <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Back-End/docs">Back-End</a>
-            </ul>
-        </div>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">
+                        <img alt="SWEDesigner API" src="bootstrap/flavour/logo.png" style = "height: 30px; width: 30px;">
+                    </a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="">Front-End</a></li>
+                        <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Back-End/docs">Back-End</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
     </body>
 </html>
+
+
+
