--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="">Front-End</a></li>
+                        <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Front-End/doc">Front-End</a></li>
                         <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Back-End/docs">Back-End</a></li>
                     </ul>
                 </div>
