--- a/index.1.html
+++ b/index.1.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>SWEDesigner API</title>
-        <link rel="stylesheet" type="text/css" href="/bootstrap/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
     </head>
 
     <body>
@@ -10,13 +10,13 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
-                        <img alt="SWEDesigner API" src="/bootstrap/flavour/logo.png" style = "height: 30px; width: 30px;">
+                        <img alt="SWEDesigner API" src="bootstrap/flavour/logo.png" style = "height: 30px; width: 30px;">
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="/docs/BEdocs">Front-End</a></li>
-                        <li><a href="/docs/FEdoc">Back-End</a></li>
+                        <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Front-End/doc">Front-End</a></li>
+                        <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Back-End/docs">Back-End</a></li>
                     </ul>
                 </div>
             </div>
