--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/doc">Front-End</a></li>
-                        <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/docs">Back-End</a></li>
+                        <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Back-End/doc">Front-End</a></li>
+                        <li><a href="https://sweetbitgroup.github.io/SWEDesigner-App/Front-End/docs">Back-End</a></li>
                     </ul>
                 </div>
             </div>
